# 2022-nju-cpl-code

./: CMakeLists.txt  LICENSE  README.md  guess.c  hello.c
0-intro/: guess.c
1-type-io/: CMakeLists.txt  admin-scanf.c  admin.c  circle.c  mol.c  sphere.c
10-double-pointers/: CMakeLists.txt  echo.c  scores.c  selection-sort-strings.c
11-function-pointers/: CMakeLists.txt  integrate.c  merge-pointer.c  sort.c
12-struct/: musician.c
13-linkedlist/: josephus.c
13-linkedlist/ll/: ll.c  ll.h
2-if-for-array/: CMakeLists.txt  leap-year.c  min-array.c  min-of-three.c  min-of-two.c
3-for-a-while/: CMakeLists.txt  binary-search.c  digits-do-while.c  digits.c  primes.c  selection-sort.c  stars.c
4-loops/: CMakeLists.txt  merge.c
5-function/: CMakeLists.txt  binary-search-fun.c  leap-year-fun.c  palindrome-fun.c  primes-fun.c  selection-sort-fun.c  stars-fun.c
6-recursion/: CMakeLists.txt  binary-search-re.c  fib-iter.c  fib-re.c  gcd-re.c  merge-sort.c  min-re.c  sum-re.c
7-data-types/: CMakeLists.txt  explicit-conversion.c  timing.c
8-pointers/: CMakeLists.txt  radius.c
9-c-strings/: strcmp.c  strcpy.c  strlen.c
